<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/winGameMessage_layout"
    style="@style/EndGameLayout"
    android:background="@drawable/dim_background_is_win">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/winGameMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/H1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_time"
        android:textColor="@color/black"
        android:textSize="@dimen/H2" />

    <TextView
        android:id="@+id/gameTime_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/H1"
        tools:text="00 : 10 : 25" />

    <Button
        android:id="@+id/button_playAgain_isWIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlayAgain_text" />

    <Button
        android:id="@+id/button_selectLevel_isWIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_level" />
</LinearLayout>