<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginNormal"
            android:gravity="center"
            android:text="@string/settingsFragmentName"
            android:textSize="@dimen/H1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginNormal"
            android:gravity="center"
            android:text="@string/selectTheme_bottom_text"
            android:textSize="@dimen/H2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginDouble"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <RadioButton
                    android:id="@+id/classicTheme_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="Classic"
                    tools:ignore="MissingConstraints" />


                <RadioButton
                    android:id="@+id/forestTheme_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Forest" />

                <RadioButton
                    android:id="@+id/vanillaTheme_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Vanilla" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginDouble"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/classicTheme_imageButton"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:alpha="0.7"
                    android:background="@drawable/selector_classic" />

                <ImageButton
                    android:id="@+id/forestTheme_imageButton"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:alpha="0.7"
                    android:background="@drawable/selector_forest" />

                <ImageButton
                    android:id="@+id/vanillaTheme_imageButton"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:alpha="0.7"
                    android:background="@drawable/selector_vanilla" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/exit_settings_button"
            style="@style/ButtonsNormal"
            android:layout_weight="1"
            android:text="@string/buttonBack_text"
            android:textSize="@dimen/H3" />

        <Button
            android:id="@+id/save_settings_button"
            style="@style/ButtonsNormal"
            android:layout_weight="2"
            android:text="@string/buttonSave_text"
            android:textSize="@dimen/H3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>